--- a/src/scripts/data/assets/sc4evermore/11-residential.yaml
+++ b/src/scripts/data/assets/sc4evermore/11-residential.yaml
@@ -3,7 +3,7 @@ assets:
     authors:
       - Mattb325
     category: residential
-    downloads: 964
+    downloads: 1020
     lastModified: 2023-08-20T03:02:51-07:00
     name: SC4D LEX Legacy - Mattb325 Residential Houses (Dark Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Mattb325_Alpha237_lg0.jpg
@@ -12,7 +12,7 @@ assets:
     authors:
       - Mattb325
     category: residential
-    downloads: 957
+    downloads: 1010
     lastModified: 2023-08-20T02:53:24-07:00
     name: SC4D LEX Legacy - Mattb325 Residential Houses (Maxis Nite)
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Mattb325_Alpha237_lg.jpg
@@ -83,7 +83,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 744
+    downloads: 791
     filename: Homefryes - American Four Square Homes v2_920.zip
     files:
       - _Documents/Homefryes_Readmes/Readme_The_American_Four_Square.htm
@@ -444,7 +444,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 841
+    downloads: 886
     filename: Homefryes - Cambridge Townhomes_2189.zip
     files:
       - _Documents/Homefryes_Readmes/Readme_Cambridge_Townhomes.htm
@@ -478,7 +478,7 @@ assets:
     authors:
       - zero7
     category: residential
-    downloads: 878
+    downloads: 924
     lastModified: 2023-08-26T23:57:53-07:00
     name: SC4D LEX Legacy - zero7 Residential Pack
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/JP_KitagataApts_Day.jpg
@@ -575,7 +575,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 603
+    downloads: 637
     filename: SC4D_LEX_Legacy_NYBT_Residentials_DarkNite_V1.zip
     files:
       - _Documents/readme_SC4D LEX Legacy - NYBT Residentials.html
@@ -741,7 +741,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 560
+    downloads: 589
     filename: SC4D_LEX_Legacy_NYBT_Residentials_MaxisNite_V1.zip
     files:
       - _Documents/readme_SC4D LEX Legacy - NYBT Residentials.html
@@ -1044,7 +1044,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 220
+    downloads: 243
     filename: BSC-VIP Girafe 4 Rue Des Lilas v2_2978.zip
     files:
       - ~Documents/BSC_Readmes/girafe/readme_4_rue_des_Lilas.html
@@ -1308,7 +1308,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 296
+    downloads: 322
     filename: BSC-VIP Girafe Villa Libeskind v2_3071.zip
     files:
       - ~Documents/BSC_Readmes/girafe/readme_villa_Libeskind.html
@@ -1623,7 +1623,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 326
+    downloads: 355
     filename: SOMY Danchi Apartments LEX.zip
     files:
       - ~Documents/SOMY_Readmes/Readme_SOMY_Danchi_Apartments.htm
@@ -1827,7 +1827,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 277
+    downloads: 305
     filename: SOMY Modern Japanese House Set LEX.zip
     files:
       - ~Documents/SOMY_Readmes/somy-jpn-house1x4.jpg
@@ -1974,7 +1974,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 146
+    downloads: 163
     filename: Romualdillo - Spanish R Residental Lots.zip
     files:
       - ~Documents/Romualdillo_Readmes/Spanish R$ Residental Lots.ReadMe.txt
@@ -2453,7 +2453,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 400
+    downloads: 448
     filename: SC4D LEX Legacy - BSC SimGoober Residentials V1.zip
     files:
       - readme_BSC_SG_Residential_Collection.html
@@ -2948,7 +2948,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 281
+    downloads: 316
     filename: BSC SG JENX Parisian Corner Residential.zip
     files:
       - ~Documents/Prop-Texture Catalogue Index and Cleanitol/Cleanitol_BSC SG JENX Residentials.txt
@@ -3061,7 +3061,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 42
+    downloads: 77
     filename: Art128 - 2 Rue de Chatillon.zip
     files:
       - art128/2 Rue de Chatillon/art128-2Rue-de-Chatillon-0x5ad0e817_0xd0000539_0x30000.SC4Model
@@ -3082,6 +3082,33 @@ assets:
     uncompressed: 5135333
     url: https://www.sc4evermore.com/index.php/downloads/download/11-residential/287-art128-2-rue-de-chatillon
     version: "1"
+  sc4evermore/303-bnl-fvu-dutch-double-houses-1930:
+    authors:
+      - FrankU
+    category: residential
+    downloads: 39
+    lastModified: 2024-10-02T15:56:44-07:00
+    name: BNL FvU Dutch double houses 1930
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Day14 Dutch double houses 1930_zpsiqgtjc2n.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/11-residential/303-bnl-fvu-dutch-double-houses-1930
+  sc4evermore/304-bnl-fvu-dutch-row-houses-1930:
+    authors:
+      - FrankU
+    category: residential
+    downloads: 41
+    lastModified: 2024-10-02T16:04:01-07:00
+    name: BNL FvU Dutch row houses 1930
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Day14 dutch row houses 1930.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/11-residential/304-bnl-fvu-dutch-row-houses-1930
+  sc4evermore/305-bnl-fvu-dutch-row-houses-1960:
+    authors:
+      - FrankU
+    category: residential
+    downloads: 33
+    lastModified: 2024-10-02T16:10:37-07:00
+    name: BNL FvU Dutch row houses 1960
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Day7 Dutch row houses 1960.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/11-residential/305-bnl-fvu-dutch-row-houses-1960
   sc4evermore/4-sc4d-lex-legacy-jmyers-homes-pack:
     authors:
       - sc4evermore
@@ -3108,7 +3135,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 1320
+    downloads: 1383
     filename: SC4D_LEX_LEGACY_JMyers_Homes_Pack_V1.zip
     files:
       - ~Documents/JMyers Homes Vol 1.html
@@ -3196,7 +3223,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 1026
+    downloads: 1074
     filename: SC4D_LEX_LEGACY_CP_Early19thCenturyResidentials_Pack_V1.zip
     files:
       - ~Documents/LEX_TenementsMain.jpg
@@ -3460,7 +3487,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 1157
+    downloads: 1209
     filename: SC4D_LEX_LEGACY_Mattb325_Residential_Multi-Unit_DarkNite.zip
     files:
       - readme_mattb325_residential_multi-unit.html
@@ -4092,7 +4119,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 1010
+    downloads: 1070
     filename: SC4D_LEX_LEGACY_Mattb325_Residential_Multi-Unit_MaxisNite.zip
     files:
       - readme_mattb325_residential_multi-unit.html
@@ -4484,4 +4511,4 @@ assets:
     url: https://www.sc4evermore.com/index.php/downloads/download/11-residential/99-sc4d-lex-legacy-mattb325-residential-multi-unit-pack-maxisnite
     version: "1"
 
-timestamp: 2024-09-13T12:10:28.279Z
+timestamp: 2024-10-17T06:14:27.427Z
