--- a/src/scripts/data/assets/simtropolis/111-automata.yaml
+++ b/src/scripts/data/assets/simtropolis/111-automata.yaml
@@ -318,9 +318,7 @@ assets:
     dependencies: []
     description: "<body>
 
-      \                           \
-
-      \t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">
+      \                            \t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">
 
       \                                  <img _title=\"This is a Popular File\" alt=\"\" class=\"ipsImage\" data-ipstooltip=\"\" src=\"https://www.simtropolis.com/library/misc/big-heart-icon.png\"
       style=\"\" width=\"34\" height=\"53\">
@@ -884,9 +882,7 @@ assets:
       - simtropolis/12973-european-car-replacement-mod
     description: "<body>
 
-      \                           \
-
-      \t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">
+      \                            \t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">
 
       \                                  <img _title=\"This is a Popular File\" alt=\"\" class=\"ipsImage\" data-ipstooltip=\"\" src=\"https://www.simtropolis.com/library/misc/big-heart-icon.png\"
       style=\"\" width=\"34\" height=\"53\">
@@ -6040,7 +6036,15 @@ assets:
 
 
 
+
+
+
+
       							
+
+
+
+
 
 
 
@@ -6212,7 +6216,15 @@ assets:
 
 
 
+
+
+
+
       							
+
+
+
+
 
 
 
@@ -6619,4 +6631,4 @@ assets:
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_09_2003/thumb-3df582124a36b37eaad9173cb060180b-Capital%20City-May.%2014,%20001058459981.JPG
     url: https://community.simtropolis.com/files/file/569-the-cow/
 
-timestamp: 2024-09-13T12:22:00.820Z
+timestamp: 2024-10-17T06:14:27.427Z
