--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "immutability-helper": "^3.1.1",
     "isomorphic-git": "^1.25.10",
     "notistack": "^3.0.1",
+    "qfs-compression": "^0.2.1",
     "react-i18next": "^14.1.2",
     "react-markdown": "^9.0.1",
     "react-material-ui-carousel": "^3.4.2",
