--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -6,7 +6,8 @@
     "src/config/**/*.json",
     "src/main/**/*",
     "src/node/**/*",
-    "src/preload/**/*"
+    "src/preload/**/*",
+    "types/*.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
