--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "react-i18next": "^14.1.2",
     "react-markdown": "^9.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10",
+    "react-virtuoso": "^4.12.0",
     "remark-gfm": "^4.0.0",
     "unzipper": "^0.11.6",
     "zustand": "^4.5.2"
@@ -65,7 +64,6 @@
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/react-window": "^1.8.8",
     "@types/turndown": "^5.0.4",
     "@types/unzipper": "^0.10.9",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
