--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.17",
+    "apexcharts": "^4.0.0",
     "content-disposition": "^0.5.4",
     "electron-log": "^5.1.4",
     "escape-html": "^1.0.3",
@@ -47,6 +48,7 @@
     "js-yaml": "^4.1.0",
     "notistack": "^3.0.1",
     "qfs-compression": "^0.2.1",
+    "react-apexcharts": "^1.5.0",
     "react-i18next": "^14.1.2",
     "react-markdown": "^9.0.1",
     "react-material-ui-carousel": "^3.4.2",
