--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.17",
+    "@uiw/react-color-sketch": "^2.3.2",
     "apexcharts": "^4.0.0",
     "content-disposition": "^0.5.4",
     "electron-log": "^5.1.4",
