--- a/src/scripts/data/assets/sc4evermore/18-reward.yaml
+++ b/src/scripts/data/assets/sc4evermore/18-reward.yaml
@@ -1,12 +1,14 @@
 assets:
-  sc4evermore/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral:
+  sc4evermore/227:
+    assetId: sc4evermore/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral
     authors:
       - Girafe
-    category: rewards
-    downloads: 295
-    lastModified: 2024-01-22T09:20:29-08:00
+    category: 18-reward
+    downloads: 312
+    lastModified: 2024-01-22T17:20:29.000Z
     name: BSC-VIP Girafe-Mattb325 Moscow Christ The Saviour Cathedral
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Icon_Grfe_CTS_s.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/18-reward/227-bsc-vip-girafe-mattb325-moscow-christ-the-saviour-cathedral
 
-timestamp: 2024-10-17T06:14:27.427Z
+meta:
+  timestamp: 2024-11-18T07:06:25.278Z
