--- a/src/scripts/data/assets/sc4evermore/43-agriculture.yaml
+++ b/src/scripts/data/assets/sc4evermore/43-agriculture.yaml
@@ -1,12 +1,24 @@
 assets:
-  sc4evermore/210-bsc-vip-girafe-agripack-vol01-v2:
+  sc4evermore/210:
+    assetId: sc4evermore/210-bsc-vip-girafe-agripack-vol01-v2
     authors:
       - Girafe
-    category: agriculture
-    downloads: 371
-    lastModified: 2024-01-20T08:42:09-08:00
+    category: 43-agriculture
+    downloads: 408
+    lastModified: 2024-01-20T16:42:09.000Z
     name: BSC-VIP Girafe Agripack Vol01 v2
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Image_agripack_2.jpg
     url: https://www.sc4evermore.com/index.php/downloads/download/43-agriculture/210-bsc-vip-girafe-agripack-vol01-v2
+  sc4evermore/320:
+    assetId: sc4evermore/320-vortext-grass-pastures
+    authors:
+      - Vortext
+    category: 43-agriculture
+    downloads: 43
+    lastModified: 2024-11-01T13:26:17.000Z
+    name: Vortext - Grass Pastures
+    thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/Pastures Overview.jpg
+    url: https://www.sc4evermore.com/index.php/downloads/download/43-agriculture/320-vortext-grass-pastures
 
-timestamp: 2024-10-17T06:14:27.427Z
+meta:
+  timestamp: 2024-11-18T07:06:25.278Z
