--- a/src/scripts/data/assets/simtropolis/37-peg-utopian-series.yaml
+++ b/src/scripts/data/assets/simtropolis/37-peg-utopian-series.yaml
@@ -1,259 +1,292 @@
 assets:
-  simtropolis/11510-peg-solar-collector-1:
+  simtropolis/11510:
+    assetId: simtropolis/11510-peg-solar-collector-1
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-11T04:20:53Z
+    category: 37-peg-utopian-series
+    lastModified: 2005-01-24T09:47:54.000Z
     name: PEG Solar Collector 1
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-8932d8a5f86a65338317c83e1c0cb91a-product_image.jpg
     url: https://community.simtropolis.com/files/file/11510-peg-solar-collector-1/
-  simtropolis/11571-peg-solar-collector-2:
+  simtropolis/11571:
+    assetId: simtropolis/11571-peg-solar-collector-2
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2017-01-27T10:51:45Z
+    category: 37-peg-utopian-series
+    lastModified: 2005-01-31T13:00:16.000Z
     name: PEG Solar Collector 2
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-e14f5f50e6e57c7b045a5732a04786d0-product_image.jpg
     url: https://community.simtropolis.com/files/file/11571-peg-solar-collector-2/
-  simtropolis/11572-peg-solar-plant-3:
+  simtropolis/11572:
+    assetId: simtropolis/11572-peg-solar-plant-3
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2017-01-27T10:48:38Z
+    category: 37-peg-utopian-series
+    lastModified: 2005-01-31T13:20:24.000Z
     name: PEG Solar Plant 3
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_01_2005/thumb-44dc34da7b8438eaf7e8a72ffc1a5fb7-product_image.jpg
     url: https://community.simtropolis.com/files/file/11572-peg-solar-plant-3/
-  simtropolis/18462-peg-sf-sky-farm-i:
+  simtropolis/18462:
+    assetId: simtropolis/18462-peg-sf-sky-farm-i
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T20:04:14Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-07-25T07:53:49.000Z
     name: PEG SF SKY FARM I
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-addaf5c7ff4ae2ac44a0c187a7255ff0-product_image.jpg
     url: https://community.simtropolis.com/files/file/18462-peg-sf-sky-farm-i/
-  simtropolis/18463-peg-sf-sky-farm-ii:
+  simtropolis/18463:
+    assetId: simtropolis/18463-peg-sf-sky-farm-ii
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2020-12-24T11:30:14Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-07-25T07:58:58.000Z
     name: PEG SF SKY FARM II
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-c90a234067bf11bc7e54fd7f5a6c98f7-product_image.jpg
     url: https://community.simtropolis.com/files/file/18463-peg-sf-sky-farm-ii/
-  simtropolis/18464-peg-sf-sky-farm-iii:
+  simtropolis/18464:
+    assetId: simtropolis/18464-peg-sf-sky-farm-iii
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T19:58:34Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-07-25T08:40:34.000Z
     name: PEG SF SKY FARM III
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-3e79c3e340c4af98f61b16f366baa276-product_image.jpg
     url: https://community.simtropolis.com/files/file/18464-peg-sf-sky-farm-iii/
-  simtropolis/18465-peg-sf-sky-farm-iv:
+  simtropolis/18465:
+    assetId: simtropolis/18465-peg-sf-sky-farm-iv
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T19:56:41Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-07-25T09:05:25.000Z
     name: PEG SF SKY FARM IV
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-7fad720e7dd8cdb50d578805f5c87405-product_image.jpg
     url: https://community.simtropolis.com/files/file/18465-peg-sf-sky-farm-iv/
-  simtropolis/18466-peg-sf-sky-farm-resource-file:
+  simtropolis/18466:
+    assetId: simtropolis/18466-peg-sf-sky-farm-resource-file
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T06:47:25Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-07-25T09:09:41.000Z
     name: PEG SF SKY FARM RESOURCE FILE
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_07_2007/thumb-d5f0f19704c6ff14d96585d8885d4dea-product_image.jpg
     url: https://community.simtropolis.com/files/file/18466-peg-sf-sky-farm-resource-file/
-  simtropolis/18501-peg-sf-sky-farm-v:
+  simtropolis/18501:
+    assetId: simtropolis/18501-peg-sf-sky-farm-v
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T06:40:54Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-08-02T11:09:36.000Z
     name: PEG SF SKY FARM V
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2007/thumb-835eb6a4621d6f90952614298cc9bb5f-product_image.jpg
     url: https://community.simtropolis.com/files/file/18501-peg-sf-sky-farm-v/
-  simtropolis/18576-peg-artificial-tree:
+  simtropolis/18576:
+    assetId: simtropolis/18576-peg-artificial-tree
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-09T06:30:36Z
+    category: 37-peg-utopian-series
+    lastModified: 2007-08-21T19:22:00.000Z
     name: PEG Artificial Tree
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2007/thumb-2264fd09a953b40df5ebbcdf83d897b6-product_image.jpg
     url: https://community.simtropolis.com/files/file/18576-peg-artificial-tree/
-  simtropolis/20606-peg-ut-plasma-gasification-plant:
+  simtropolis/20606:
+    assetId: simtropolis/20606-peg-ut-plasma-gasification-plant
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T01:09:48Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-04T08:31:15.000Z
     name: PEG UT Plasma Gasification Plant
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-6bad2df036e670e505b775c492c6e4a2-product_image.jpg
     url: https://community.simtropolis.com/files/file/20606-peg-ut-plasma-gasification-plant/
-  simtropolis/20621-peg-ut-w2e-replacement-mod:
+  simtropolis/20621:
+    assetId: simtropolis/20621-peg-ut-w2e-replacement-mod
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T01:03:27Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-08T07:48:37.000Z
     name: PEG UT W2E Replacement Mod
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-1c8e24ec2a7998ec579833d10608ca76-product_image.jpg
     url: https://community.simtropolis.com/files/file/20621-peg-ut-w2e-replacement-mod/
-  simtropolis/20632-peg-ut-subway-station:
+  simtropolis/20632:
+    assetId: simtropolis/20632-peg-ut-subway-station
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T01:00:33Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-09T10:17:49.000Z
     name: PEG UT Subway Station
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-c3ad81b31a9d632e17b35196e63716bf-product_image.jpg
     url: https://community.simtropolis.com/files/file/20632-peg-ut-subway-station/
-  simtropolis/20633-peg-ut-small-plaza:
+  simtropolis/20633:
+    assetId: simtropolis/20633-peg-ut-small-plaza
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T00:58:50Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-09T10:19:42.000Z
     name: PEG UT Small Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-1ea336aadd5de5556ba38e7206c4953e-product_image.jpg
     url: https://community.simtropolis.com/files/file/20633-peg-ut-small-plaza/
-  simtropolis/20664-peg-ut-large-subway-plaza:
+  simtropolis/20664:
+    assetId: simtropolis/20664-peg-ut-large-subway-plaza
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T00:54:41Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-18T12:29:35.000Z
     name: PEG UT Large Subway Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-b3c0840f508e99ff21561daa98b68726-product_image.jpg
     url: https://community.simtropolis.com/files/file/20664-peg-ut-large-subway-plaza/
-  simtropolis/20702-peg-ut-mall-canal-resource-pack:
+  simtropolis/20702:
+    assetId: simtropolis/20702-peg-ut-mall-canal-resource-pack
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-08T00:49:45Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-25T19:55:17.000Z
     name: PEG UT Mall Canal Resource Pack
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-bd3d2512034af55e9dca333bc949d294-product_image.jpg
     url: https://community.simtropolis.com/files/file/20702-peg-ut-mall-canal-resource-pack/
-  simtropolis/20703-peg-ut-large-mall-canal:
+  simtropolis/20703:
+    assetId: simtropolis/20703-peg-ut-large-mall-canal
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:53:08Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-25T19:58:49.000Z
     name: PEG UT Large Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-354b088c6abe171838b04bfdb85f35d3-product_image.jpg
     url: https://community.simtropolis.com/files/file/20703-peg-ut-large-mall-canal/
-  simtropolis/20712-peg-ut-bus-stop:
+  simtropolis/20712:
+    assetId: simtropolis/20712-peg-ut-bus-stop
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:50:41Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-26T09:25:47.000Z
     name: PEG UT Bus Stop
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-911d69031015739d283c49e93b4e181a-product_image.jpg
     url: https://community.simtropolis.com/files/file/20712-peg-ut-bus-stop/
-  simtropolis/20713-peg-ut-large-plaza:
+  simtropolis/20713:
+    assetId: simtropolis/20713-peg-ut-large-plaza
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:46:19Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-26T09:37:40.000Z
     name: PEG UT Large Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-78cc224c83d7c5c8b585c2f95ae0cf64-product_image.jpg
     url: https://community.simtropolis.com/files/file/20713-peg-ut-large-plaza/
-  simtropolis/20723-peg-ut-medium-plaza:
+  simtropolis/20723:
+    assetId: simtropolis/20723-peg-ut-medium-plaza
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:40:48Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-27T08:08:42.000Z
     name: PEG UT Medium Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-b272ddb97e70964b50b0c81ba8a07538-product_image.jpg
     url: https://community.simtropolis.com/files/file/20723-peg-ut-medium-plaza/
-  simtropolis/20724-peg-ut-mall-canal-corner:
+  simtropolis/20724:
+    assetId: simtropolis/20724-peg-ut-mall-canal-corner
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:36:41Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-27T08:14:24.000Z
     name: PEG UT Mall Canal Corner
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-a8140aa558c41719056f81b006441ed8-product_image.jpg
     url: https://community.simtropolis.com/files/file/20724-peg-ut-mall-canal-corner/
-  simtropolis/20730-peg-ut-small-mall-canal:
+  simtropolis/20730:
+    assetId: simtropolis/20730-peg-ut-small-mall-canal
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:33:00Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-11-28T09:31:02.000Z
     name: PEG UT Small Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2008/thumb-d27892bb6b9c285f8741c60124a15d42-product_image.jpg
     url: https://community.simtropolis.com/files/file/20730-peg-ut-small-mall-canal/
-  simtropolis/20750-peg-ut-mall-canal-tee:
+  simtropolis/20750:
+    assetId: simtropolis/20750-peg-ut-mall-canal-tee
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:28:50Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-01T19:47:43.000Z
     name: PEG UT Mall Canal Tee
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8081134725fb4056fa5b4917481a7b02-product_image.jpg
     url: https://community.simtropolis.com/files/file/20750-peg-ut-mall-canal-tee/
-  simtropolis/20751-pet-ut-mall-canal-plaza:
+  simtropolis/20751:
+    assetId: simtropolis/20751-pet-ut-mall-canal-plaza
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:25:57Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-01T19:50:59.000Z
     name: PET UT Mall Canal Plaza
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-d1d835f024f576feb1a20561cd85be08-product_image.jpg
     url: https://community.simtropolis.com/files/file/20751-pet-ut-mall-canal-plaza/
-  simtropolis/20755-peg-ut-mall-canal-bus-stop:
+  simtropolis/20755:
+    assetId: simtropolis/20755-peg-ut-mall-canal-bus-stop
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:23:42Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-02T00:47:24.000Z
     name: PEG UT Mall Canal Bus Stop
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-2745aabe09cacb387616aea4952284fe-product_image.jpg
     url: https://community.simtropolis.com/files/file/20755-peg-ut-mall-canal-bus-stop/
-  simtropolis/20778-peg-ut-medium-mall-canal:
+  simtropolis/20778:
+    assetId: simtropolis/20778-peg-ut-medium-mall-canal
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:19:17Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-04T09:30:53.000Z
     name: PEG UT Medium Mall Canal
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8e402ff53c21d5c3e0471aacf5b5f541-product_image.jpg
     url: https://community.simtropolis.com/files/file/20778-peg-ut-medium-mall-canal/
-  simtropolis/20779-peg-ut-mall-canal-4way:
+  simtropolis/20779:
+    assetId: simtropolis/20779-peg-ut-mall-canal-4way
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:16:59Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-04T09:34:51.000Z
     name: PEG UT Mall Canal 4way
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-8865e46af2f58191a32bd66fb5f77c75-product_image.jpg
     url: https://community.simtropolis.com/files/file/20779-peg-ut-mall-canal-4way/
-  simtropolis/20780-peg-ut-mall-canal-end:
+  simtropolis/20780:
+    assetId: simtropolis/20780-peg-ut-mall-canal-end
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:13:10Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-04T09:38:28.000Z
     name: PEG UT Mall Canal End
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-3c9b6a4b1b36d4b3c7083e0560a47386-product_image.jpg
     url: https://community.simtropolis.com/files/file/20780-peg-ut-mall-canal-end/
-  simtropolis/20805-peg-ut-res-com-avenue-medians:
+  simtropolis/20805:
+    assetId: simtropolis/20805-peg-ut-res-com-avenue-medians
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:08:39Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-09T23:03:18.000Z
     name: PEG UT RES COM Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-ed5e3c46059ffd371770910acb00074a-product_image.jpg
     url: https://community.simtropolis.com/files/file/20805-peg-ut-res-com-avenue-medians/
-  simtropolis/20811-peg-ut-ind-avenue-medians:
+  simtropolis/20811:
+    assetId: simtropolis/20811-peg-ut-ind-avenue-medians
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:06:22Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-11T06:49:04.000Z
     name: PEG UT IND Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-5bd4d97d9d829f37d3a602cb41c0321d-product_image.jpg
     url: https://community.simtropolis.com/files/file/20811-peg-ut-ind-avenue-medians/
-  simtropolis/20818-peg-ut-seaport-avenue-medians:
+  simtropolis/20818:
+    assetId: simtropolis/20818-peg-ut-seaport-avenue-medians
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:04:11Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-12T13:38:39.000Z
     name: PEG UT Seaport Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-3d07e1502d4eba54122950b0a28375f9-product_image.jpg
     url: https://community.simtropolis.com/files/file/20818-peg-ut-seaport-avenue-medians/
-  simtropolis/20829-peg-ut-airport-avenue-medians:
+  simtropolis/20829:
+    assetId: simtropolis/20829-peg-ut-airport-avenue-medians
     authors:
       - Pegasus
-    category: civics
-    lastModified: 2015-07-07T23:00:12Z
+    category: 37-peg-utopian-series
+    lastModified: 2008-12-14T16:26:39.000Z
     name: PEG UT Airport Avenue Medians
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_12_2008/thumb-497ca39e1ea14b4357ff4a04bbb7a532-product_image.jpg
     url: https://community.simtropolis.com/files/file/20829-peg-ut-airport-avenue-medians/
 
-timestamp: 2024-10-17T06:14:27.427Z
+meta:
+  timestamp: 2024-11-18T07:06:25.278Z
