index custom/github assets

--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -1,3 +1,117 @@
+github/0xC0000054/sc4-auto-run-cheats: null
+
+github/0xC0000054/sc4-auto-save:
+  packageId: null-45/auto-save
+  variantId: default
+
+github/0xC0000054/sc4-city-date-sync:
+  packageId: null-45/city-date-sync
+  variantId: default
+
+github/0xC0000054/sc4-city-lottery-ordinance:
+  packageId: null-45/city-lottery-ordinance
+  variantId: default
+
+github/0xC0000054/sc4-cpu-options:
+  packageId: null-45/cpu-options
+  variantId: default
+
+github/0xC0000054/sc4-custom-budget-departments:
+  packageId: null-45/custom-budget-departments
+  variantId: default
+
+github/0xC0000054/sc4-dbpf-loading:
+  packageId: null-45/startup-performance-optimization
+  variantId: default
+
+github/0xC0000054/sc4-disable-cheats: null
+
+github/0xC0000054/sc4-disable-demolition-animation:
+  packageId: null-45/disable-demolition-animation
+  variantId: default
+
+github/0xC0000054/sc4-disable-lot-plop-smoke:
+  packageId: null-45/disable-lot-plop-smoke
+  variantId: default
+
+github/0xC0000054/sc4-disable-network-construction-sounds:
+  packageId: null-45/disable-network-construction-sounds
+  variantId: default
+
+github/0xC0000054/sc4-graphics-options:
+  packageId: null-45/graphics-options
+  variantId: default
+
+github/0xC0000054/sc4-growify:
+  packageId: null-45/growify
+  variantId: default
+
+github/0xC0000054/sc4-humane-society-ordinance:
+  packageId: null-45/humane-society-ordinance
+  variantId: default
+
+github/0xC0000054/sc4-legalize-gambling-ordinance-upgrade:
+  packageId: null-45/legalize-gambling-ordinance
+  variantId: default
+
+github/0xC0000054/sc4-more-building-styles:
+  packageId: null-45/more-building-styles
+  variantId: default
+
+github/0xC0000054/sc4-more-demand-info:
+  packageId: null-45/more-demand-info
+  variantId: default
+
+github/0xC0000054/sc4-no-kick-out:
+  packageId: null-45/no-kickout-lower-wealth
+  variantId: default
+
+github/0xC0000054/sc4-query-ui-hooks:
+  packageId: null-45/query-tool-ui-extensions
+  variantId: default
+
+github/0xC0000054/sc4-region-census:
+  packageId: null-45/region-view-census
+  variantId: default
+
+github/0xC0000054/sc4-remove-phantom-budget-items:
+  packageId: null-45/remove-phantom-budget-items
+  variantId: default
+
+github/0xC0000054/sc4-resource-loading-hooks:
+  packageId: null-45/resource-loading-hooks
+  variantId: default
+
+github/bioruebe/cicdec: null
+
+github/ip7z/7zip: null
+
+github/memo33/cam-exemplar-patch: null
+
+github/memo33/sc4-3d-camera-dll:
+  packageId: memo/3d-camera
+  variantId: default
+
+github/memo33/sc4-thumbnail-fix-dll:
+  packageId: memo/region-thumbnail-fix
+  variantId: default
+
+github/memo33/submenus-dll:
+  packageId: memo/submenus-dll
+  variantId: default
+
+github/memo33/transparent-texture-fix-dll:
+  packageId: memo/transparent-texture-fix
+  variantId: default
+
+hide-inoki/1391-neko-props-set-3: null
+
+hide-inoki/1482-neko-props-set-1: null
+
+hide-inoki/1483-neko-props-set-2: null
+
+hide-inoki/has-dependencies: null
+
 sc4evermore/1-sc4d-lex-legacy-hkabt-dependencies-pack:
   packageId: hkabt/common-dependencies
 
@@ -2064,3 +2178,9 @@ simtropolis/554-residential-6by-collection:
   variantId: default
 
 simtropolis/72-the-smogger: null
+
+toutsimcities/1686-r6-props-pack-2010-vol-1: null
+
+toutsimcities/1780-namspopof-props-pack-vol-1: null
+
+toutsimcities/1882-namspopof-props-pack-vol-2: null
