index custom/github assets

--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -164,6 +164,7 @@ sc4evermore/138-sc4d-lex-legacy-zero7-commercial-pack:
 
 sc4evermore/14-maxis-buildings-as-props-and-dlc-props-v2-1:
   packageId: maxis/maxis-buildings-as-props
+  variantId: default
 
 sc4evermore/142-aptx-ultra-prop-pack:
   packageId: aptx/mega-props-collection
@@ -786,6 +787,7 @@ simtropolis/22379-village-pack-9-new-houses-from-zeeland-the-netherlands:
 
 simtropolis/22400-maxis-prop-names-and-query-fix:
   packageId: maxis/maxis-buildings-as-props
+  variantId: default
 
 simtropolis/22527-hh-modular-parking-gray-version-2:
   packageId: hoo47/modular-parking
@@ -2178,6 +2180,132 @@ simtropolis/554-residential-6by-collection:
   variantId: default
 
 simtropolis/72-the-smogger: null
+
+simtropolis/761020-opera-house-fix-for-modpacc-zero: null
+
+simtropolis/maxis-day-of-peace:
+  packageId: maxis/day-of-peace
+  variantId: default
+
+simtropolis/maxis-flags-ca: null
+
+simtropolis/maxis-flags-us: null
+
+simtropolis/maxis-plugin-002-the-living-mall:
+  packageId: maxis/the-living-mall
+  variantId: default
+
+simtropolis/maxis-plugin-003-arc-de-triomphe:
+  packageId: maxis/arc-de-triomphe
+  variantId: default
+
+simtropolis/maxis-plugin-004-seoul-city-hall:
+  packageId: maxis/seoul-city-hall
+  variantId: default
+
+simtropolis/maxis-plugin-005-seoul-soccer-stadium:
+  packageId: maxis/seoul-soccer-stadium
+  variantId: default
+
+simtropolis/maxis-plugin-006-globe-arena:
+  packageId: maxis/globe-arena
+  variantId: default
+
+simtropolis/maxis-plugin-007-air-force-base:
+  packageId: maxis/air-force-base
+  variantId: default
+
+simtropolis/maxis-plugin-008-kunjungjon:
+  packageId: maxis/kunjungjon
+  variantId: default
+
+simtropolis/maxis-plugin-009-namdaemun:
+  packageId: maxis/namdaemun
+  variantId: default
+
+simtropolis/maxis-plugin-00A-63-building:
+  packageId: maxis/63-building
+  variantId: default
+
+simtropolis/maxis-plugin-00C-brandenburg-gate:
+  packageId: maxis/brandenburg-gate
+  variantId: default
+
+simtropolis/maxis-plugin-00D-parthenon:
+  packageId: maxis/parthenon
+  variantId: default
+
+simtropolis/maxis-plugin-00E-schloss-schoenbrun:
+  packageId: maxis/schloss-schoenbrun
+  variantId: default
+
+simtropolis/maxis-plugin-00F-temple-expiatiori:
+  packageId: maxis/sagrada-familia
+  variantId: default
+
+simtropolis/maxis-plugin-010-grand-central-station:
+  packageId: maxis/grand-central-station
+  variantId: default
+
+simtropolis/maxis-plugin-012-capitol-records:
+  packageId: maxis/capitol-records
+  variantId: default
+
+simtropolis/maxis-plugin-016-stonehenge:
+  packageId: maxis/stonehenge
+  variantId: default
+
+simtropolis/maxis-plugin-017-san-francisco-city-hall:
+  packageId: maxis/san-francisco-city-hall
+  variantId: default
+
+simtropolis/maxis-plugin-030-taipei-art-museum:
+  packageId: maxis/taipei-art-museum
+  variantId: default
+
+simtropolis/maxis-plugin-031-adler-planetarium:
+  packageId: maxis/adler-planetarium
+  variantId: default
+
+simtropolis/maxis-plugin-032-mayflower-port:
+  packageId: maxis/mayflower-port
+  variantId: default
+
+simtropolis/maxis-plugin-033-rockefeller-center:
+  packageId: maxis/rockefeller-center
+  variantId: default
+
+simtropolis/maxis-plugin-034-sobchak-lanes:
+  packageId: maxis/sobchak-lanes
+  variantId: default
+
+simtropolis/maxis-plugin-035-shorty-burger:
+  packageId: maxis/shorty-burger
+  variantId: default
+
+simtropolis/maxis-plugin-036-luckys-hang-ten:
+  packageId: maxis/luckys-hang-ten
+  variantId: default
+
+simtropolis/maxis-plugin-grutze-industries:
+  packageId: maxis/grutze-industries
+  variantId: default
+
+simtropolis/maxis-plugin-grutzehaus:
+  packageId: maxis/grutzehaus
+  variantId: default
+
+simtropolis/maxis-plugin-longfellow-castle:
+  packageId: maxis/longfellow-castle
+  variantId: default
+
+simtropolis/maxis-plugin-stone-house:
+  packageId: maxis/stone-house
+  variantId: default
+
+simtropolis/maxis-plugin-temple-of-grutz:
+  packageId: maxis/temple-of-grutz
+  variantId: default
 
 toutsimcities/1686-r6-props-pack-2010-vol-1: null
 
